@@ -1,0 +1,321 @@
+# General information about this quest
+[info]
+title_bar = Zelda: Mystery of Solarus DX
+write_dir = zsdx
+outside_world_width = 2080
+outside_world_height = 3584
+
+# Somes initial values when creating a new savegame
+[initial]
+starting_map = 0
+starting_point = start_position
+max_life = 12
+life = 12
+
+# List of equipment items:
+# determines the equipment, the treasures and the pickable items
+
+[item.feather]
+name = Feather
+savegame_variable = 1100
+can_be_assigned = true
+
+[item.bombs]
+name = Bombs
+savegame_variable = 1101
+can_be_assigned = true
+counter = 1024
+
+[item.bombs_refill]
+name = Bombs refill
+changes_counter = bombs
+nb_variants = 3
+amount_1 = 1
+probability_1 = 8
+amount_2 = 5
+probability_2 = 5
+amount_3 = 10
+probability_3 = 2
+brandish_when_picked = false
+can_disappear = true
+
+[item.bomb_bag]
+name = Bomb bag
+savegame_variable = 1024
+limit_for_counter = bombs
+nb_variants = 3
+amount_1 = 10
+amount_2 = 30
+amount_3 = 99
+
+[item.bow]
+name = Bow
+savegame_variable = 1102
+can_be_assigned = true
+counter = 1025
+
+[item.arrows_refill]
+name = Arrows refill
+changes_counter = bow
+nb_variants = 3
+amount_1 = 1
+probability_1 = 8
+amount_2 = 5
+probability_2 = 5
+amount_3 = 10
+probability_3 = 2
+brandish_when_picked = false
+can_disappear = true
+shadow = small
+
+[item.quiver]
+name = Quiver
+savegame_variable = 1025
+limit_for_counter = bow
+nb_variants = 3
+amount_1 = 10
+amount_2 = 30
+amount_3 = 99
+
+[item.boomerang]
+name = Boomerang
+savegame_variable = 1103
+can_be_assigned = true
+
+[item.lamp]
+name = Lamp
+savegame_variable = 1104
+can_be_assigned = true
+ability = see_in_dark
+
+[item.hookshot]
+name = Hookshot
+savegame_variable = 1105
+can_be_assigned = true
+
+[item.bottle_1]
+name = Bottle 1
+savegame_variable = 1106
+can_be_assigned = true
+ability = bottle
+
+[item.pegasus_shoes]
+name = Pegasus Shoes
+savegame_variable = 1107
+can_be_assigned = true
+
+[item.mystic_mirror]
+name = Mystic Mirror
+savegame_variable = 1108
+can_be_assigned = true
+
+[item.cane_of_somaria]
+name = Cane of Somaria
+savegame_variable = 1109
+can_be_assigned = true
+
+[item.apples]
+name = apples
+savegame_variable = 1110
+can_be_assigned = true
+counter = 1028
+limit = 10
+
+[item.pains_au_chocolat]
+name = Pains au chocolat
+savegame_variable = 1111
+can_be_assigned = true
+counter = 1026
+limit = 10
+
+[item.croissants]
+name = Croissants
+savegame_variable = 1112
+can_be_assigned = true
+counter = 1027
+limit = 10
+
+[item.bottle_2]
+name = Bottle 2
+savegame_variable = 1113
+can_be_assigned = true
+ability = bottle
+
+[item.rock_key]
+name = Rock key
+savegame_variable = 1114
+
+[item.red_key]
+name = Red key
+savegame_variable = 1115
+
+[item.clay_key]
+name = Clay key
+savegame_variable = 1116
+
+[item.level_4_way_bone_key]
+name = Apple pie / Gold bars / Edelweiss / Bone key
+savegame_variable = 1117
+nb_variants = 4
+
+[item.flippers]
+name = Flippers
+savegame_variable = 1118
+ability = swim
+
+[item.magic_cape]
+name = Magic cape
+savegame_variable = 1119
+ability = detect_weak_walls
+
+[item.bottle_3]
+name = Bottle 3
+savegame_variable = 1120
+ability = bottle
+
+[item.iron_key]
+name = Iron key
+savegame_variable = 1121
+
+[item.stone_key]
+name = Stone key
+savegame_variable = 1122
+
+[item.wooden_key]
+name = Wooden key
+savegame_variable = 1123
+
+[item.ice_key]
+name = Ice key
+savegame_variable = 1124
+
+[item.glove]
+name = Glove
+savegame_variable = 1125
+nb_variants = 2
+ability = lift
+
+[item.fire_stones]
+name = Fire stones
+savegame_variable = 1126
+counter = 1029
+
+[item.fire_stone]
+name = Fire stone
+changes_counter = fire_stones
+amount = 1
+
+[item.bottle_4]
+name = Bottle 4
+savegame_variable = 1127
+ability = bottle
+
+[item.tunic]
+name = Tunic
+nb_variants = 3
+initial_variant = 1
+ability = tunic
+
+[item.sword]
+name = Sword
+nb_variants = 4
+ability = sword
+
+[item.shield]
+name = Shield
+nb_variants = 3
+ability = shield
+
+[item.world_map]
+name = World map
+savegame_variable = 1031
+ability = see_outside_world_minimap
+
+[item.rupee_bag]
+name = Rupee bag
+limit_for_counter = money
+nb_variants = 3
+initial_variant = 1
+amount_1 = 100
+amount_2 = 300
+amount_3 = 999
+
+[item.magic_bar]
+name = Magic bar
+limit_for_counter = magic
+nb_variants = 2
+initial_variant = 0
+amount_1 = 42
+amount_2 = 84
+
+[item.map]
+name = Dungeon map
+ability = see_dungeon_minimap_rooms
+
+[item.compass]
+name = Dungeon compass
+ability = see_dungeon_minimap_elements
+
+[item.big_key]
+name = Dungeon big key
+ability = open_dungeon_big_locks
+
+[item.boss_key]
+name = Dungeon boss key
+impact = dungeon
+ability = open_dungeon_boss_lock
+
+[item.small_key]
+name = Small key
+changes_counter = small_keys
+amount = 1
+brandish_when_picked = false
+sound_when_picked = picked_small_key
+shadow = small
+
+[item.rupee]
+name = Rupee
+changes_counter = money
+nb_variants = 3
+amount_1 = 1
+probability_1 = 50
+amount_2 = 5
+probability_2 = 15
+amount_3 = 20
+probability_3 = 5
+brandish_when_picked = false
+sound_when_picked = picked_rupee
+can_disappear = true
+shadow = small
+
+[item.magic_flask]
+name = Magic flask
+changes_counter = magic
+nb_variants = 2
+amount_1 = 6
+probability_1 = 25
+amount_2 = 42
+probability_2 = 8
+brandish_when_picked = false
+can_disappear = true
+shadow = small
+
+[item.heart]
+name = Heart
+changes_counter = life
+amount = 1
+probability = 100
+brandish_when_picked = false
+can_disappear = true
+shadow = small
+
+[item.heart_container]
+name = Heart container
+
+[item.piece_of_heart]
+name = Piece of heart
+
+[item.fairy]
+name = Fairy
+probability = 2
+
